--- a/PROJECTS/P4.html
+++ b/PROJECTS/P4.html
@@ -209,8 +209,8 @@
 <h2>Entrega</h2>
 	<p>
 		La entrega de este proyecto sera en parejas a traves del GES el dia TBA a las 11:55 pm, y su calificacion sera <b>presencial</b>. Deben ir al salon especificado en 
-		las fechas designadas y se le preguntara sobre su proyecto. Su nota sera basada en la explicacion que de y en el funcionamiento de su procesador. Si no conoce alguno de 
-		los modulos de su procesador, o no sabe por que un componente esta conectado donde esta, asumiremos que copio y tendra una nota de 0.
+		las fechas designadas y se le preguntara sobre su proyecto. Su nota sera basada en la explicacion que den y en el funcionamiento de su procesador. Si no conocen alguno de 
+		los modulos de su procesador, o no saben por que un componente esta conectado donde esta, asumiremos que copiaron y tendran una nota de 0.
 		Dejando de lado las advertencias sobre copia, este es el ultimo proyecto, asi que muchos animos a todos y felicidades por llegar hasta este punto. Cualquier duda adicional
 		pueden escribirla a <i><font color = "#209D20">efrainh12@galileo.edu</font></i>
 	</p>
