Fecha establecida para Mayo 20

--- a/PROJECTS/P4.html
+++ b/PROJECTS/P4.html
@@ -24,7 +24,8 @@
 <ul>
   	<li>¡Empiece pronto!</li>
   	<li>Este proyecto es el mas didactico y menos abstracto de todos, pero no por eso significa que su nivel de complejidad sera menor.</li>
-	<li>Este proyecto debe realizarse en parejas; usted puede compartir su código con usted mismo y con su compañero unicamente.</li>
+	<li>Este proyecto debe realizarse en parejas; usted puede compartir su código con usted mismo y con su compañero unicamente. Se asumiran las parejas del proyecto anterior,
+		si desea cambiarlas, debe mandar un correo con el nuevo grupo a <i><font color = "#209D20">efrainh12@galileo.edu</font></i>.</li>
   	<li><strong>Asegúrese de leer todas las especificaciones del proyecto antes de iniciarlo.</strong></li>
 </ul>
 
@@ -208,11 +209,11 @@
 	</p>
 <h2>Entrega</h2>
 	<p>
-		La entrega de este proyecto sera en parejas a traves del GES el dia TBA a las 11:55 pm, y su calificacion sera <b>presencial</b>. Deben ir al salon especificado en 
+		La entrega de este proyecto sera en parejas a traves del GES el dia 20 de Mayo a las 11:55 pm, y su calificacion sera <b>presencial</b>. Deben ir al salon especificado en 
 		las fechas designadas y se le preguntara sobre su proyecto. Su nota sera basada en la explicacion que den y en el funcionamiento de su procesador. Si no conocen alguno de 
 		los modulos de su procesador, o no saben por que un componente esta conectado donde esta, asumiremos que copiaron y tendran una nota de 0.
 		Dejando de lado las advertencias sobre copia, este es el ultimo proyecto, asi que muchos animos a todos y felicidades por llegar hasta este punto. Cualquier duda adicional
-		pueden escribirla a <i><font color = "#209D20">efrainh12@galileo.edu</font></i>
+		pueden escribirla a <i><font color = "#209D20">efrainh12@galileo.edu</font></i>.
 	</p>
 
 </div>
