Agregada seccion de pruebas.

--- a/PROJECTS/P4.html
+++ b/PROJECTS/P4.html
@@ -207,6 +207,13 @@
 		Para instalarla solo deben descargar el archivo <b>.jar</b> e importarlo en <b>Project/Load Library</b>. Esta libreria tambien contiene un Register File, tome en cuenta
 		que este componente no lo podra utilizar, usted debe crear su propio Register File. Exceptuando esto, usted es libre de utilizar cualquier otro componente para su proyecto.
 	</p>
+<h2>Testing</h2>
+	<p>
+		Para probar su procesador, pueden descargar del ges el archivo llamado <b>Ensamblado Proyecto 4</b>. Este es un archivo .s que contiene un proyecto de ensamblador del 
+		año anterior. Con el pueden escribir su codigo en assembler, en la seccion que label <b>programa</b>, linea 4, y traducirlo al codigo hexadecimal que su procesador debe 
+		poder interpretar. El codigo a ensamblar debe ser un string, sin errores y con una instruccion por linea (para separar lineas debe escribir <b>\n</b>). Otra forma de 
+		probar su codigo es escribiendolo en un simulador como Mars, ensamblarlo y copiar cada instruccion manualmente, o bien, traduciendo cada instruccion manualmente.
+	</p>	
 <h2>Entrega</h2>
 	<p>
 		La entrega de este proyecto sera en parejas a traves del GES el dia 20 de Mayo a las 11:55 pm, y su calificacion sera <b>presencial</b>. Deben ir al salon especificado en 
