Correccion Faltas Seccion Testing

--- a/PROJECTS/P4.html
+++ b/PROJECTS/P4.html
@@ -210,9 +210,9 @@
 <h2>Testing</h2>
 	<p>
 		Para probar su procesador, pueden descargar del ges el archivo llamado <b>Ensamblado Proyecto 4</b>. Este es un archivo .s que contiene un proyecto de ensamblador del 
-		año anterior. Con el pueden escribir su codigo en assembler, en la seccion que label <b>programa</b>, linea 4, y traducirlo al codigo hexadecimal que su procesador debe 
+		año anterior. Con el pueden escribir su codigo en assembler, en la label <b>programa</b>, linea 4, y traducirlo al codigo hexadecimal que su procesador debe 
 		poder interpretar. El codigo a ensamblar debe ser un string, sin errores y con una instruccion por linea (para separar lineas debe escribir <b>\n</b>). Otra forma de 
-		probar su codigo es escribiendolo en un simulador como Mars, ensamblarlo y copiar cada instruccion manualmente, o bien, traduciendo cada instruccion manualmente.
+		probar su codigo es escribiendolo en un simulador como Mars, ensamblarlo y copiar cada instruccion manualmente, o bien, traduciendo cada instruccion ustedes mismos.
 	</p>	
 <h2>Entrega</h2>
 	<p>
