Instrucciones de libreria Toys agregadas

--- a/PROJECTS/P4.html
+++ b/PROJECTS/P4.html
@@ -204,8 +204,10 @@
 <h2>Toys</h2>
 	<p>
 		Existe una libreria para logisim llamada CS316 que agrega algunos elementos extra (Pantallas LCD, Teclado, etc) que puede usar para su proyecto. 
-		Para instalarla solo deben descargar el archivo <b>.jar</b> e importarlo en <b>Project/Load Library</b>. Esta libreria tambien contiene un Register File, tome en cuenta
-		que este componente no lo podra utilizar, usted debe crear su propio Register File. Exceptuando esto, usted es libre de utilizar cualquier otro componente para su proyecto.
+		Para instalarla solo deben descargar el archivo <b>.jar</b> e importarlo en <b>Project/Load Library/JAR Library</b>, y cuando solicite el nombre de la classe deben 
+		escribir <b>edu.cornell.cs316.Components</b> Esta libreria tambien contiene un Register File, tome en cuenta que este componente no lo podra utilizar, 
+		usted debe crear su propio Register File. Exceptuando esto, usted es libre de utilizar cualquier otro componente para su proyecto.
+		
 	</p>
 <h2>Testing</h2>
 	<p>
