--- a/PROJECTS/P4.html
+++ b/PROJECTS/P4.html
@@ -97,7 +97,8 @@
   	</ul>
 </p>
 <p>
-	Esta es una lista de las instrucciones que su procesador debe poder ejecutar:
+	Esta es una lista de las instrucciones que su procesador debe poder ejecutar, las instrucciones en azul son las que deben pertenecer a la <b>ALU</b>. Para los branches,
+	la ALU uncamiente se debe encargar de evaluar la condicion, el salto debe hacerlo el modulo de <b>Jump Controller</b>:
 	<div align="center">
 		<table border=3 cellspacing=3 cellpadding=3 class="assembler-ins">
 			<tr>
@@ -106,94 +107,94 @@
 				<td align="center">TIPO J</td>
 			</tr>
 			<tr>
-				<td align="center">ADD</td>
-				<td align="center">BEQ</td>
+				<td align="center" style="background-color:#BBBBDD">ADD</td>
+				<td align="center" style="background-color:#BBBBDD">BEQ</td>
 				<td align="center">J</td>
 			</tr>
 			<tr>
-				<td align="center">ADDU</td>
-				<td align="center">BNE</td>
+				<td align="center" style="background-color:#BBBBDD">ADDU</td>
+				<td align="center" style="background-color:#BBBBDD">BNE</td>
 				<td align="center">JAL</td>
 			</tr>
 			<tr>
-				<td align="center">AND</td>
-				<td align="center">ADDI</td>
+				<td align="center" style="background-color:#BBBBDD">AND</td>
+				<td align="center" style="background-color:#BBBBDD">ADDI</td>
 				<td align="center"></td>
 			</tr>
 			<tr>
 				<td align="center">JR</td>
-				<td align="center">ADDIU</td>
+				<td align="center" style="background-color:#BBBBDD">ADDIU</td>
 				<td align="center"></td>
 			</tr>
 			<tr>
-				<td align="center">NOR</td>
-				<td align="center">SLTI</td>
+				<td align="center" style="background-color:#BBBBDD">NOR</td>
+				<td align="center" style="background-color:#BBBBDD">SLTI</td>
 				<td align="center"></td>
 			</tr>
 			<tr>
-				<td align="center">OR</td>
-				<td align="center">SLTIU</td>
+				<td align="center" style="background-color:#BBBBDD">OR</td>
+				<td align="center" style="background-color:#BBBBDD">SLTIU</td>
 				<td align="center"></td>
 			</tr>
 			<tr>
-				<td align="center">SLT</td>
-				<td align="center">ANDI</td>
+				<td align="center" style="background-color:#BBBBDD">SLT</td>
+				<td align="center" style="background-color:#BBBBDD">ANDI</td>
 				<td align="center"></td>
 			</tr>
 			<tr>
-				<td align="center">SLTU</td>
-				<td align="center">ORI</td>
+				<td align="center" style="background-color:#BBBBDD">SLTU</td>
+				<td align="center" style="background-color:#BBBBDD">ORI</td>
 				<td align="center"></td>
 			</tr>
 			<tr>
-				<td align="center">SLL</td>
-				<td align="center">XORI</td>
+				<td align="center" style="background-color:#BBBBDD">SLL</td>
+				<td align="center" style="background-color:#BBBBDD">XORI</td>
 				<td align="center"></td>
 			</tr>
 			<tr>
-				<td align="center">SRL</td>
-				<td align="center">LUI</td>
+				<td align="center" style="background-color:#BBBBDD">SRL</td>
+				<td align="center" style="background-color:#BBBBDD">LUI</td>
 				<td align="center"></td>
 			</tr>
 			<tr>
-				<td align="center">SUB</td>
+				<td align="center" style="background-color:#BBBBDD">SUB</td>
 				<td align="center">LW</td>
 				<td align="center"></td>
 			</tr>
 			<tr>
-				<td align="center">SUBU</td>
+				<td align="center" style="background-color:#BBBBDD">SUBU</td>
 				<td align="center">SW</td>
 				<td align="center"></td>
 			</tr>
 			<tr>
-				<td align="center">DIV</td><td align="center"></td><td align="center"></td>
+				<td align="center" style="background-color:#BBBBDD">DIV</td><td align="center"></td><td align="center"></td>
 			</tr>
 			<tr>
-				<td align="center">DIVU</td><td align="center"></td><td align="center"></td>
+				<td align="center" style="background-color:#BBBBDD">DIVU</td><td align="center"></td><td align="center"></td>
 			</tr>
 			<tr>
-				<td align="center">MFHI</td><td align="center"></td><td align="center"></td>
+				<td align="center" style="background-color:#BBBBDD">MFHI</td><td align="center"></td><td align="center"></td>
 			</tr>
 			<tr>
-				<td align="center">MFLO</td><td align="center"></td><td align="center"></td>
+				<td align="center" style="background-color:#BBBBDD">MFLO</td><td align="center"></td><td align="center"></td>
 			</tr>
 			<tr>
-				<td align="center">MULT</td><td align="center"></td><td align="center"></td>
+				<td align="center" style="background-color:#BBBBDD">MULT</td><td align="center"></td><td align="center"></td>
 			</tr>
 			<tr>
-				<td align="center">MULTU</td><td align="center"></td><td align="center"></td>
+				<td align="center" style="background-color:#BBBBDD">MULTU</td><td align="center"></td><td align="center"></td>
 			</tr>
 			<tr>
-				<td align="center">XOR</td><td align="center"></td><td align="center"></td>
+				<td align="center" style="background-color:#BBBBDD">XOR</td><td align="center"></td><td align="center"></td>
 			</tr>
 			<tr>
-				<td align="center">SRA</td><td align="center"></td><td align="center"></td>
+				<td align="center" style="background-color:#BBBBDD">SRA</td><td align="center"></td><td align="center"></td>
 			</tr>
 			<tr>
-				<td align="center">SLLV</td><td align="center"></td><td align="center"></td>
+				<td align="center" style="background-color:#BBBBDD">SLLV</td><td align="center"></td><td align="center"></td>
 			</tr>
 			<tr>
-				<td align="center">SRLV</td><td align="center"></td><td align="center"></td>
+				<td align="center" style="background-color:#BBBBDD">SRLV</td><td align="center"></td><td align="center"></td>
 			</tr>
 		</table>
 	</div>
