--- a/labs.html
+++ b/labs.html
@@ -4,7 +4,7 @@ title: CC3
 ---
 
 <div class="home" id="home">
-  <h1 class="pageTitle">Laboratorios Recientes</h1>
+  <h1 class="pageTitle">Laboratorios</h1>
   <ul class="posts noList">
       {% for post in site.categories.lab %}
       <li>
