--- a/tutorials/install/index.html
+++ b/tutorials/install/index.html
@@ -775,8 +775,7 @@ import zipfile
 </pre></div>
 
 
-<p>https://docs.microsoft.com/en-us/windows/wsl/install-win10#manual-installation-steps
-Si ninguno nos dio problema, Python esta listo; si alguno fallo, lo instalaremos con pip</p>
+<p>Si ninguno nos dio problema, Python esta listo; si alguno fallo, lo instalaremos con pip</p>
 <div class="codehilite"><pre><span></span>pip3 install nombreDelPaqueteQueDioError
 </pre></div>
 
