--- a/labs/lab00/index.html
+++ b/labs/lab00/index.html
@@ -1064,6 +1064,7 @@ git push -u origin master
 <p>Si no lo hizo al principio, visite esta pagina y agregue a <strong>cc3-notas</strong> como colaborador. Si no lo hace, no le podremos calificar este lab.</p>
 <div class="codehilite"><pre><span></span>https://github.com/SuNombreDeUsuarioEnGithub/lab0_git/settings/access
 </pre></div>
+          <p>Despues de esto, envie el link de su repositorio en la asignacion del GES</p>
 
 
 <p>Listo, termino su primer laboratorio.</p>
