instrucciones lab0 lab1

--- a/labs/lab00/index.html
+++ b/labs/lab00/index.html
@@ -972,7 +972,7 @@ git push -u origin master
 <div class="codehilite"><pre><span></span>git remote set-url origin https://github.com/USUARIO/lab0_git.git<span class="sb">`</span>
 </pre></div>
 
-<p>Ahora que tenemos nuestro laboratorio almacenado en GitHub (pueden verificar esto navegando hacia https://github.com/USUARIO/lab0_git.git), podemos agregar un archivo y hacer algunos <em>commits</em>. Vamos a crear un archivo llamado <code>hello.sh</code> en la carpeta del laboratorio ejecutando el siguiente commando en la terminal:</p>
+<p>Ahora que tenemos nuestro laboratorio almacenado en GitHub (pueden verificar esto navegando hacia <code>https://github.com/USUARIO/lab0_git</code>), podemos agregar un archivo y hacer algunos <em>commits</em>. Vamos a crear un archivo llamado <code>hello.sh</code> en la carpeta del laboratorio ejecutando el siguiente commando en la terminal:</p>
 <div class="codehilite"><pre><span></span><span class="nb">echo</span> <span class="s1">&#39;echo &quot;Hola Mundo&quot;&#39;</span> &gt; hello.sh
 </pre></div>
 
@@ -1064,7 +1064,6 @@ git push -u origin master
 <p>Si no lo hizo al principio, visite esta pagina y agregue a <strong>cc3-notas</strong> como colaborador. Si no lo hace, no le podremos calificar este lab.</p>
 <div class="codehilite"><pre><span></span>https://github.com/SuNombreDeUsuarioEnGithub/lab0_git/settings/access
 </pre></div>
-          <p>Despues de esto, envie el link de su repositorio en la asignacion del GES</p>
 
 
 <p>Listo, termino su primer laboratorio.</p>
