--- a/labs/lab01/index.html
+++ b/labs/lab01/index.html
@@ -1044,7 +1044,7 @@ $ git push -u origin main
 
 
 <p>Espera un minuto aprox. y luego puede ver sus resultados con...</p>
-<div class="codehilite"><pre><span></span>autograders --stats
+<div class="codehilite"><pre><span></span>autograder --stats
 </pre></div>
 
 
