--- a/labs/lab02/index.html
+++ b/labs/lab02/index.html
@@ -954,7 +954,7 @@ De nuevo, recuérdense de hacer el push.</p>
 
 
 <p>Espera un minuto aprox. y luego puede ver sus resultados con...</p>
-<div class="codehilite"><pre><span></span>autograders --stats
+<div class="codehilite"><pre><span></span>autograder --stats
 </pre></div>
 
 
