--- a/labs/lab02/index.html
+++ b/labs/lab02/index.html
@@ -872,7 +872,7 @@ Aquí tendrán que responder las siguientes preguntas de opción múltiple con e
   b. cond break expr  <br />
   c. break ... if expr  <br />
   d. Ninguna de las anteriores</p>
-<p><strong>3.</strong> ¿Con qué comando se ejecuta la <strong>siguiente línea del código en C</strong> después de parar en un breakpoint? (si la línea a ejecutar es una llamada a función, debe ejecutarse toda la función)</p>
+<p><strong>3.</strong> ¿Con qué comando se ejecuta la <strong>siguiente línea del código en C</strong> después de parar en un breakpoint? (si la línea a ejecutar es una llamada a función, "pasa por encima", es decir la ejecuta pero no entra a debuggearla)</p>
 <p>a. run  <br />
   b. s  <br />
   c. c  <br />
@@ -897,11 +897,11 @@ Aquí tendrán que responder las siguientes preguntas de opción múltiple con e
   b. signal expr  <br />
   c. print expr <br />
   d. next expr    </p>
-<p><strong>8.</strong> ¿Cómo se imprime una lista de <strong>todas las variables y su valor</strong> en la función actual?</p>
-<p>a. display all  <br />
-  b. display  <br />
-  c. print all  <br />
-  d. print    </p>
+<p><strong>8.</strong> ¿Cómo se imprime una lista de <strong>todas las variables locales y su valor</strong> en la función actual?</p>
+<p>a. info locals  <br />
+  b. display locals <br />
+  c. info all  <br />
+  d. display all    </p>
 <p><strong>9.</strong> ¿Cómo salimos de cgdb?</p>
 <p>a. end  <br />
   b. quit <br />
