--- a/labs/lab04/index.html
+++ b/labs/lab04/index.html
@@ -929,13 +929,13 @@ source ~/.bashrc
 <ol>
 <li>Abran la interfaz gráfica de Jupiter, escribiendo <code>jupiter</code> en su terminal. </li>
 <li>Desde el editor abran el archivo llamado <strong>ex1.s</strong> que esta en la carpeta <strong>ex1</strong>.</li>
-<li>En la barra de herramientas de Jupiter, vayan a settings y asegúrense de que <strong>Assemble Only Selected Tab</strong> esté seleccionado con un cheque verde.</li>
+<li>En la barra de herramientas de Jupiter, vayan a settings y asegúrense de que <strong>Assemble Only Selected File</strong> esté seleccionado con un cheque verde.</li>
 <li>Guarden su programa, luego presionen <kbd>F3</kbd>. Esto va a preparar el código para que pueda ser ejecutado y simulado. Si hacen click a la pestaña "Editor", su simulación se va a reiniciar.</li>
 <li>En el simulador, para ejecutar la siguiente instrucción, presionen el botón que dice "step".</li>
 <li>Para regresar un paso atrás, presionen el botón que dice "backstep".</li>
 <li>Para correr todo el programa hasta que termine, presionen el botón que dice "go".</li>
 <li>Para volver a empezar el programa nuevamente, presionen el botón que dice "reset".</li>
-<li>Para ver el contenido de los 32 registros en la parte derecha del simulador, hay una pestaña que dice <code>RVI</code>.</li>
+<li>Para ver el contenido de los 32 registros en la parte derecha del simulador, hay una pestaña que dice <code>Registers</code>.</li>
 <li>La consola está en la parte de abajo del simulador.</li>
 <li>Para ver el contenido de la memoria, en el mismo lugar que los registros hay una pestaña que dice <code>Memory</code>, pueden navegar a diferentes secciones de la memoria haciendo click derecho encima de la tabla que muestra el estado de la memoria.</li>
 </ol>
