Link de Mega agregagdo

--- a/tutorials/install/index.html
+++ b/tutorials/install/index.html
@@ -710,7 +710,8 @@
 <p>Puede utilizar <a href="https://www.vmware.com/products/workstation-player.html">VMware Player</a> (gratuito, sin necesidad de licencia) para abrir y utilizar maquinas virtuales ya hechas. Adicionalmente, en los próximos días se les enviará licencia para VMware Workstation con el cual también pueden crear sus propias máquinas virtuales.</p>
 <p>Luego de instalar VMware Player, descargue la siguiente máquina virtual. Descomprímala y abra el archivo .vmx (VMware virtual machine configuration).</p>
 <p>Todos los links son para la misma maquina virtual. Si alguno falla, utilice otro.</p>
-<p><a href="https://drive.google.com/file/d/1FdxtXya0jA5iSUpeSvBXxc4Vzmz1JyUm/view?usp=sharing">Descargar maquina virtual desde Google Drive</a></p>
+<p><a href="https://drive.google.com/file/d/1FdxtXya0jA5iSUpeSvBXxc4Vzmz1JyUm/view?usp=sharing">Descargar máquina virtual desde Google Drive</a></p>
+<p><a href="https://mega.nz/file/vMBlBLiD#DlbxbxvM_X_Pbhl-r5pN2cB4yXqE8lOtK1a-GB0EjtY">Descargar máquina virtual desde Mega</a></p>
 <div class="codehilite"><pre><span></span>Usuario: student 
 Contrasena: student
 </pre></div>
